Bug 1960002 - Increase window min-width to keep the window control buttons visible. r=dao,desktop-theme-reviewers,extension-reviewers,rpl
When the profiles menu is visible, the window control buttons can be
pushed offscreen on windows and linux.

It looks like 450px was set as max-width in 2020 in bug 1610497, despite
some unhappy comments in bug 897160. It seems like enough time has
passed to bump up the min-width, especially as both mobile viewports and
desktop viewports have increased in resolution in the five years since
the min-width was last increased.

It would be nice to avoid using magic numbers at all, but this change
fixes the current bug for now.

Differential Revision: https://phabricator.services.mozilla.com/D258989

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -51,7 +51,7 @@ body {
   }
 
   &:not([chromehidden~="toolbar"]) {
-    min-width: 450px;
+    min-width: 500px;
     min-height: 120px;
 
     /* stylelint-disable-next-line media-query-no-invalid */
